# calculator

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
assets/linux/: Calculator.appdata.xml  Calculator.desktop
qml/: ACButton.qml  Application.qml  BackspaceButton.qml  CalculatorButton.qml  Display.qml  FlipSignButton.qml  NumPad.qml
qml/components/: BackspaceButton.qml  CalculatorButton.qml  DigitButton.qml  DotButton.qml  OperatorButton.qml  ScrollableText.qml
scripts/: uninstall.sh
src/: CalculatorEngine.cpp  CalculatorEngine.h  Logger.cpp  Logger.h  main.cpp
